rm valid.js && add index.js

--- a/t/normal.html
+++ b/t/normal.html
@@ -13,8 +13,9 @@ qunitTap(
 </script>
 
 <script src="./js/jquery-1.9.1.min.js"></script>
+<script src="./js/underscore-min.js"></script>
 <!-- テストを受けるモジュール -->
-<script src="../valid.js"></script>
+<script src="../index.js"></script>
 <!-- テストコードを記載した .jsファイル -->
 <script src="./test.js"></script>
 <title>Mod Testing</title>
@@ -23,3 +24,5 @@ qunitTap(
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 </body>
+
+
