--- a/t/all.html
+++ b/t/all.html
@@ -19,11 +19,14 @@ var is = QUnit.strictEqual;
 <script src="./02.js"></script>
 <script src="./03.js"></script>
 <script src="./worker/worker.js"></script>
+<script src="./browser/Valid.Types.isDom.js"></script>
 <title>Testing load modules - "QUnit", "Valid"</title>
 </head>
 <body>
 <div id="qunit"></div>
-<div id="qunit-fixture"></div>
+<div id="qunit-fixture">
+  <div id="DIV">TEST-TEXT</div>
+</div>
 </body>
 
 
